crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__approval_modal_exec_multiline_prefix_no_execpolicy.snap
---
source: tui/src/chat_screen/tests.rs
expression: contents
---


  Would you like to run the following command?

  $ python - <<'PY'
  print('hello')
  PY

› 1. Yes, proceed (y)
  2. No, and tell Savfox what to do differently (esc)

  Press enter to confirm or esc to cancel
