crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__approvals_selection_popup@windows.snap
---
source: tui/src/chat_screen/tests.rs
assertion_line: 2654
expression: popup
---
  Update Model Permissions

› 1. Read Only (current)  Savfox can read files in the current workspace.
                          Approval is required to edit files or access the
                          internet.
  2. Default              Savfox can read and edit files in the current
                          workspace, and run commands. Approval is required to
                          access the internet or edit other files. (Identical
                          to Agent mode)
  3. Full Access          Savfox can edit files outside this workspace and
                          access the internet without asking for approval.
                          Exercise caution when using.

  Press enter to confirm or esc to go back
