crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__chat_small_idle_h2.snap
---
source: tui/src/chat_screen/tests.rs
expression: terminal.backend()
---
"                                        "
"                                        "
